# wgpu-rust-homework

./: Cargo.toml  LICENSE  README.md
src/: main.rs  shader.wgsl  shader2.wgsl
